--- a/src/CommunityLibrarySystem.Api/appsettings.Development.json
+++ b/src/CommunityLibrarySystem.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=CommunityLibrarySystem;User Id=sa;Password=Sql2022@!;TrustServerCertificate=True;"
   }
 }
