--- a/src/CommunityLibrarySystem.Api/appsettings.json
+++ b/src/CommunityLibrarySystem.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=CommunityLibrarySystem;User Id=sa;Password=Sql2022@!;TrustServerCertificate=True;"
+  }
 }
