feat: Implementação emprestimo de livros - Autenticação, Value Objects e Migrations

--- a/src/CommunityLibrarySystem.Infrastructure/CommunityLibrarySystem.Infrastructure.csproj
+++ b/src/CommunityLibrarySystem.Infrastructure/CommunityLibrarySystem.Infrastructure.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CommunityLibrarySystem.Application\CommunityLibrarySystem.Application.csproj" />
     <ProjectReference Include="..\CommunityLibrarySystem.Domain\CommunityLibrarySystem.Domain.csproj" />
   </ItemGroup>
 
