--- a/src/CommunityLibrarySystem.Api/appsettings.json
+++ b/src/CommunityLibrarySystem.Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=CommunityLibrarySystem;User Id=sa;Password=Sql2022@!;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "bb6a2158-1e59-4c77-9148-a5839d3e7c69-SECRET-KEY",
+    "Issuer": "CommunityLibrarySystem",
+    "Audience": "CommunityLibrarySystemUsers"
   }
 }
