--- a/src/CommunityLibrarySystem.Api/appsettings.json
+++ b/src/CommunityLibrarySystem.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=CommunityLibrarySystem;User Id=sa;Password=Sql2022@!;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost;Database=CommunityLibrarySystem;User Id=sa;Password={SuaSenha};TrustServerCertificate=True;"
   },
   "Jwt": {
     "Key": "bb6a2158-1e59-4c77-9148-a5839d3e7c69-SECRET-KEY",
